# pdf-ocr-api

./:  test-requirements.txt  .flake8  .gitignore  Dockerfile  README.md  build.sh  k8s-deployment.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  test_main.py  test_main_simplified.py  test_simple.py
.github/workflows/: docker-build.yml  tests.yml
